--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
-    "pg": "^7.8.1"
+    "pg": "^7.8.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
