--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "reactstrap": "^7.1.0"
   },
