--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "client": "npm start --prefix client",
     "server": "nodemon server",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "start": "node server",
+    "postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "pg": "^7.8.1",
     "request": "^2.88.0",
