--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+package-lock.json
+
 
 # TypeScript v1 declaration files
 typings/
@@ -60,7 +62,7 @@ typings/
 # next.js build output
 .next
 
-# todo
+# Other
 TODO
 .DS_Store
 ._.DS_Store
