--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Matcha (Tinder like)",
   "main": "index.js",
   "scripts": {
+    "client-install": "cd client && npm i",
+    "server-install": "cd server && npm i",
+    "install": "concurrently \"npm run server-install\" \"npm run client-install\"",
     "client": "npm start --prefix client",
     "server": "nodemon server",
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
@@ -27,14 +30,5 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.10"
-  },
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.4",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "pg": "^7.8.1",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
   }
 }
