--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.10"
+  },
+  "dependencies": {
+    "node-fetch": "^2.3.0",
+    "react-redux": "^7.0.1",
+    "uniqid": "^5.0.3",
+    "util": "^0.11.1"
   }
 }
