--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "node-fetch": "^2.3.0",
+    "passport": "^0.4.0",
     "react-redux": "^7.0.1",
     "uniqid": "^5.0.3",
     "util": "^0.11.1"
