--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "css-loader": "^2.1.1",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -13,7 +15,8 @@
     "react-scripts": "2.1.5",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "style-loader": "^0.23.1"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
