--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.0.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "uniqid": "^5.0.3",
     "util": "^0.11.1"
   }
 }
