--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "cookie-session": "^1.3.3",
     "node-fetch": "^2.3.0",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "react": "^16.8.6",
     "react-redux": "^7.0.1",
+    "redux": "^4.0.1",
     "uniqid": "^5.0.3",
     "util": "^0.11.1"
   }
