--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.8.1",
     "react-redux": "^7.0.1",
     "request": "^2.88.0",
