--- a/package.json
+++ b/package.json
@@ -29,24 +29,12 @@
   "homepage": "https://github.com/m-rezgui/matcha#readme",
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "eslint": "^5.16.0",
+    "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-google": "^0.12.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "nodemon": "^1.18.10"
   },
-  "dependencies": {
-    "cookie-session": "^1.3.3",
-    "node-fetch": "^2.3.0",
-    "nodemailer": "^6.1.1",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "react": "^16.8.6",
-    "react-redux": "^7.0.1",
-    "redux": "^4.0.1",
-    "uniqid": "^5.0.3",
-    "util": "^0.11.1"
-  }
+  "dependencies": {}
 }
