--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,13 @@
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "dotenv": "^6.2.0",
     "esm": "^3.2.20",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^1.18.10",
+    "node-fetch": "^2.5.0",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.8.1",
