--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "react"
     ],
     "rules": {
+		"no-await-in-loop" : 0,
         "linebreak-style": 0,
         "import/no-unresolved": 0,
         "react/prop-types": 0,
