--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-infinite-scroll-component": "^4.5.2",
     "react-redux": "^6.0.1",
     "react-responsive": "^6.1.2",
     "react-router-dom": "^4.3.1",
