--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
         "no-confusing-arrow": ["error", {"allowParens": true}],
         "no-nested-ternary": "off",
         "no-console": "off",
+        "no-continue":0,
         "implicit-arrow-linebreak": "off"
       },
       "parser": "babel-eslint"
