--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^6.2.0",
     "esm": "^3.2.20",
     "express": "^4.16.4",
+    "geolib": "^2.0.24",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.5.0",
     "nodemailer": "^6.1.1",
@@ -20,6 +21,7 @@
     "pg": "^7.8.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "sort-json-array": "^0.1.7",
     "uniqid": "^5.0.3",
     "util": "^0.11.1"
   }
