--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-infinite-loader": "^1.0.3",
     "react-infinite-scroll-component": "^4.5.2",
     "react-redux": "^6.0.1",
     "react-responsive": "^6.1.2",
