--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^2.2.0",
     "style-loader": "^0.23.1"
   },
   "scripts": {
