--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "clsx": "^1.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "moment": "^2.24.0",
