--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "semantic-ui-react": "^0.86.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^2.2.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "ws": "^3.3.3"
   },
   "scripts": {
     "start": "cross-env PORT=3000 NODE_PATH=src react-scripts start",
