--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "react-redux": "^6.0.1",
     "react-responsive": "^6.1.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^3.0.1",
     "react-slick": "^0.24.0",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
