--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "homepage": "https://github.com/m-rezgui/matcha#readme",
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "10.0.1",
     "concurrently": "^4.1.0",
-    "eslint": "^5.12.0",
+    "eslint": "5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "geolib": "^2.0.24",
-    "sort-json-array": "^0.1.7"
+    "sort-json-array": "^0.1.7",
+    "ws": "^7.0.0"
   }
 }
