--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "esm": "^3.2.20",
     "express": "^4.16.4",
@@ -18,6 +19,7 @@
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "pg": "^7.8.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
