--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
     ],
     "rules": {
     "no-restricted-globals" : 0,
-		"no-await-in-loop" : 0,
+        "no-await-in-loop" : 0,
+        "no-underscore-dangle": 0,
         "linebreak-style": 0,
         "import/no-unresolved": 0,
         "react/prop-types": 0,
