--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "client": "npm start --prefix client",
     "server": " NODE_ENV=devloppement nodemon server",
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "test": "cd client && npm run build && cd .. && NODE_ENV=production nodemon server ",
-    "42CorrectionInstall": "cd server && npm i && cd ../client && npm i && npm run build ",
+    "test": "npm i && cd client && npm run build && cd .. && NODE_ENV=production nodemon server ",
+    "42CorrectionInstall": "npm i && cd server && npm i && cd ../client && npm i && npm run build ",
     "42CorrectionRun": "NODE_ENV=production nodemon server",
     "prod": "NODE_ENV=production nodemon server",
     "start": "node server",
