--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "homepage": "http://localhost:3000/",
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
+    "@material-ui/lab": "^4.0.0-alpha.14",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "clsx": "^1.0.4",
     "create": "0.0.2",
