--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.5.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-infinite-loader": "^1.0.3",
