new GoogleMap component to change location

--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "create": "0.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.5.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-geocode": "^0.1.2",
+    "react-google-location": "^1.2.2",
     "react-infinite-loader": "^1.0.3",
     "react-infinite-scroll-component": "^4.5.2",
     "react-redux": "^6.0.1",
