--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.5.0",
     "react": "^16.8.4",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.4",
     "react-geocode": "^0.1.2",
     "react-google-location": "^1.2.2",
