--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.14",
+    "antd": "^3.19.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "clsx": "^1.0.4",
