--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "create": "0.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "form-data": "^2.3.3",
     "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
